--- a/_scss/_posts-in-category.scss
+++ b/_scss/_posts-in-category.scss
@@ -40,6 +40,7 @@
 
   &__excerpt {
     margin-top: $margin-xssm;
+    overflow-x: scroll;
   }
 
   &__no-posts {
